--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,6 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -26,8 +18,20 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+h1{
+  @apply text-4xl desktop:text-8xl;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  .absolute-center {
+    @apply top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
+  }
+
+  .container-default{
+    @apply px-4 desktop:px-10
   }
 }
